graficos casi al 100% faltan detalles, ahora anda por periodo de fecha o por dipositivo

--- a/web/elektron/assets/css/styles.css
+++ b/web/elektron/assets/css/styles.css
@@ -36,3 +36,11 @@
 .boxes-orange{
   background: #f0934e;
 }
+
+.buttons-grid {
+  display: grid;
+}
+
+.buttons-grid button{
+  margin-bottom: 2px;
+}
