--- a/web/elektron/assets/less/styles.less
+++ b/web/elektron/assets/less/styles.less
@@ -47,7 +47,7 @@
 //@import "bootstrap/popovers.less";
 
 // Components: Misc
-//@import "bootstrap/alerts.less";
+@import "bootstrap/alerts.less";
 @import "bootstrap/thumbnails.less";
 @import "bootstrap/media.less";
 @import "bootstrap/labels.less";
