--- a/web/elektron/views/components.html
+++ b/web/elektron/views/components.html
@@ -14,9 +14,11 @@
 
 			<panel panel-class="panel-primary" data-heading="Componentes conectados">
 				  <panel-controls>
-					<panel-control-collapse></panel-control-collapse>
-					<button class="button-icon"><i class="glyphicon glyphicon-cog"></i></button>
-					<button class="button-icon"><i class="glyphicon glyphicon-wrench"></i></button>
+  					<panel-control-collapse></panel-control-collapse>
+  					<!--
+              <button class="button-icon"><i class="glyphicon glyphicon-cog"></i></button>
+  					   <button class="button-icon"><i class="glyphicon glyphicon-wrench"></i></button>
+            -->
 				  </panel-controls>
 				  <table class="table table-bordered table-condensed">
 					<tr style="font-weight: bold">
@@ -74,7 +76,7 @@
 					  </td>
 					</tr>
         </table>
-				  <button class="btn btn-default" ng-click="addComponent()">Agregar componente</button>
+				  <!--<button class="btn btn-default" ng-click="addComponent()">Agregar componente</button>-->
 			</panel>
 		</div>
 	</div>
