--- a/web/elektron/views/index.html
+++ b/web/elektron/views/index.html
@@ -14,17 +14,24 @@
     <div class="row">
         <div class="col-md-8 animated-content">
 
-            <panel panel-class="panel-default no-padding" heading="Ultimos 20 datos medidos">
+            <panel panel-class="panel-default no-padding" heading="Consumo en tiempo real del sistema (últimos 20 datos)">
                 <panel-controls>
                     <panel-control-collapse></panel-control-collapse>
-                    <panel-control-title></panel-control-title>
+                    <button ng-show="websocketStatus" class="btn btn-sm btn-success">On</button>
+                    <button ng-show="!websocketStatus" class="btn btn-sm btn-danger">Off</button>
+                    <!--<panel-control-title></panel-control-title>
                     <panel-control-colors></panel-control-colors>
                     <panel-control-refresh type="circular" is-loading="loadingChartData" ng-click="refreshAction()"></panel-control-refresh>
                     <div class="pull-right mr10 hidden-xs">
+
+
                         <button class="btn btn-sm btn-default" style="text-transform: uppercase;" daterangepicker="drp_options" date-begin="drp_start" date-end="drp_end">
                             <i class="glyphicon glyphicon-calendar"></i> <span style="margin-left: 5px">{{drp_start}} - {{drp_end}}</span> <b class="caret"></b>
                         </button>
+
+
                     </div>
+                  -->
                 </panel-controls>
 
                 <div class="p20">
@@ -42,7 +49,9 @@
                         </div>-->
                     </div>
                 </div>
+                <!--
                 <div class="m-n panel-footer">
+
                     <div class="row">
                         <div class="visitor-sparklines col-xs-12 col-sm-3 col-md-3">
                             <div class="sparkline-block">
@@ -126,35 +135,98 @@
                             <p style="text-align: center; margin: 0;">Componentes</p>
                         </div>
                     </div>
-                </div>
 
+                </div>
+                -->
             </panel>
         </div>
         <div class="col-md-4 animated-content">
             <div class="row">
                 <div class="col-xs-6">
+                  <a href="#/components" class="boxes-a boxes-success" >
+                    <div class="boxes-title">
+                        <div class="text-center">Componentes activados</div>
+                    </div>
+                    <div class="boxes-body">
+                        <div class="text-center">{{ components_server_enabled.length || 0 }}</div>
+                    </div>
+                  </a>
+                </div>
+
+                <div class="col-xs-6">
+                  <a href="#/components" class="boxes-a boxes-dark" >
+                    <div class="boxes-title">
+                        <div class="text-center">Componentes desactivados</div>
+                    </div>
+                    <div class="boxes-body">
+                        <div class="text-center">{{ components_server_not_enabled.length || 0 }}</div>
+                    </div>
+                  </a>
+                </div>
+                <!--<div class="col-xs-6">
                     <tile-simple data="{ title: 'Componentes', href: '#/ui-tiles',text: '8', color: 'success'}"></tile-simple>
-                </div>
-                <div class="col-xs-6">
+                </div>-->
+                <!--<div class="col-xs-6">
                     <tile-simple data="{ title: 'Tareas programadas', href: '#/ui-tiles',text: '17', color: 'midnightblue'}"></tile-simple>
-                </div>
+                </div>-->
             </div>
             <div class="row">
                 <div class="col-xs-6">
-                    <tile-simple data="{ title: 'Último valor medido', href: '#/ui-tiles',text: '33w', color: 'orange'}"></tile-simple>
+                    <a href="#/tasks" class="boxes-a boxes-orange" >
+                      <div class="boxes-title">
+                          <div class="text-center">Tareas programadas por consumo</div>
+                      </div>
+                      <div class="boxes-body">
+                          <div class="text-center">{{ datatasks_server.length || 0 }}</div>
+                      </div>
+                    </a>
                 </div>
                 <div class="col-xs-6">
+                    <a href="#/tasks" class="boxes-a boxes-green" >
+                      <div class="boxes-title">
+                          <div class="text-center">Tareas programadas por tiempo</div>
+                      </div>
+                      <div class="boxes-body">
+                          <div class="text-center">{{ datetimetasks_server.length || 0 }}</div>
+                      </div>
+                    </a>
+                </div>
+
+                <!--<div class="col-xs-6">
                     <tile-simple data="{ title: 'Maximo consumo planificado', href: '#/ui-tiles',text: '733 Kw', color: 'danger'}"></tile-simple>
-                </div>
+                </div>-->
             </div>
             <div class="row">
-                <div class="col-xs-6">
+
+              <div class="col-xs-6">
+                <a href="#/components" class="boxes-a boxes-indigo" >
+                  <div class="boxes-title">
+                      <div class="text-center">Consumo total</div>
+                  </div>
+                  <div class="boxes-body">
+                      <div class="text-center">233kw</div>
+                  </div>
+                </a>
+              </div>
+
+              <div class="col-xs-6">
+                <a href="#/components" class="boxes-a boxes-danger" >
+                  <div class="boxes-title">
+                      <div class="text-center">Costo aproximado</div>
+                  </div>
+                  <div class="boxes-body">
+                      <div class="text-center">$ 1.100</div>
+                  </div>
+                </a>
+              </div>
+              <!--  <div class="col-xs-6">
                     <tile-simple data="{ title: 'Consumo actual', href: '#/ui-tiles',text: '161 kw', color: 'primary'}"></tile-simple>
                 </div>
                 <div class="col-xs-6">
-                    <tile-simple data="{ title: 'Costo aproximado', href: '#/ui-tiles',text: '$1.138', color: 'green'}"></tile-simple>
-                </div>
+                    <tile-simple data="{ title: 'Costo aproximado', href: '#/ui-tiles',text: '$1.138', color: 'danger'}"></tile-simple>
+                </div-->
             </div>
+            <!--
             <div class="row">
                 <div class="col-md-6">
                     <tile type="default" heading="Limite ocupado">
@@ -172,8 +244,8 @@
                         </div>
                     </tile>
                 </div>
-
             </div>
+            -->
         </div>
     </div>
 
