--- a/web/elektron/assets/less/styles.less
+++ b/web/elektron/assets/less/styles.less
@@ -30,8 +30,8 @@
 // Components: common
 @import "bootstrap/component-animations.less";
 @import "bootstrap/dropdowns.less";
-//@import "bootstrap/list-group.less";
-//@import "bootstrap/wells.less";
+@import "bootstrap/list-group.less";
+@import "bootstrap/wells.less";
 @import "bootstrap/close.less";
 
 // Components: Nav
